# mkcal

./: CMakeLists.txt
src/: CMakeLists.txt  alarmhandler.cpp  alarmhandler_p.h  dummystorage.h  extendedcalendar.cpp  extendedcalendar.h  extendedstorage.cpp  extendedstorage.h  invitationhandlerif.h  servicehandler.cpp  servicehandler.h  servicehandlerif.h  sqliteformat.cpp  sqliteformat.h  sqlitestorage.cpp  sqlitestorage.h
tests/: CMakeLists.txt  tst_storage.cpp
tools/mkcaltool/: CMakeLists.txt  main.cpp  mkcaltool.cpp  mkcaltool.h
